--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,15 @@ h2 {
     width: 180px;
     margin-right: 20px;
 }
+
+#long-title {
+    font-size: 35px;
+}
+
+.info-text {
+    font-size: 20px;
+    text-align: center;
+    width: 70%;
+    margin: auto;
+    padding-bottom: 50px;
+}
